style.css
@import url(https://fonts.googleapis.com/css?family=Asta+Sans:300,regular,500,600,700,800);

body {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  margin: 0;
  background-image: url(https://png.pngtree.com/background/20230611/original/pngtree-the-scene-of-an-ancient-roman-building-picture-image_3171707.jpg);
  background-size: cover;
}

#container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  border-style: outset;
  padding-top: 20px;
  padding-bottom: 100px;
  gap: 10px;
  background-color: rgb(186, 178, 178);
}

#title {
  border: 8px double black;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 1rem;
  padding: 0px 5px;
  background-color: beige;
  font-style: "astra sans", cursive;
}

#number {
  padding: 8px;
  font-size: 14px;
}

#convert-btn {
  padding: 8px;
  font-size: 14px;
  width: 30%;
}

.copy-btn {
  background-color: #4caf50; /* Green background */
  color: white; /* White text */
  border: none; /* Remove borders */
  padding: 10px 20px; /* Padding */
  font-size: 16px; /* Font size */
  cursor: pointer; /* Pointer on hover */
  border-radius: 5px; /* Rounded corners */
  display: flex; /* Align icon and text */
  align-items: center;
  gap: 8px; /* Space between icon and text */
}

